Fix z-index of folder icons in install dialog

--- a/src/frontend/components/UI/Dialog/index.css
+++ b/src/frontend/components/UI/Dialog/index.css
@@ -49,7 +49,7 @@
 
 .Dialog__header {
   display: flex;
-  z-index: 1;
+  z-index: 2;
   padding-bottom: var(--dialog-gap);
 }
 
@@ -63,7 +63,7 @@
 
 .Dialog__Close {
   padding: 0 var(--dialog-margin-horizontal) 0 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .Dialog__Close,
